--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "devDependencies": {
     "css-parse": "~1.6.0",
     "css-stringify": "~1.3.2",
+    "express" : "latest",
     "grunt": "~0.4.2",
+    "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -31,6 +33,7 @@
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-nodemon": "0.2.1",
     "grunt-recess": "~0.6.1",
     "less": "~1.4.2",
     "parameterize": "0.0.7",
