--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-parse": "~1.6.0",
     "css-stringify": "~1.3.2",
     "express" : "latest",
+    "forever" : "latest",
     "grunt": "~0.4.2",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -41,6 +42,7 @@
     "semver": "~2.2.1",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-less": "^0.11.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "mongoose" : "latest"
   }
 }
